Added line editor to basic ROM, split ROM into basic and ext sections. The ext session contains helper methods specific to the hardware.

--- a/msbasic/v6502c.cfg
+++ b/msbasic/v6502c.cfg
@@ -1,6 +1,7 @@
 MEMORY {
 	ZP:		start = $0000, size = $0100, type = rw;
-	BASROM:		start = $D000, size = $2FFA, fill = yes, file = %O;
+	BASROM:		start = $D000, size = $2800, fill = yes, file = %O;
+	EXTROM:		start = $F800, size = $07FA, fill = yes, file = %O;
 	CPUVEC:		start = $FFFA, size = $0006, fill = yes, file = %O;
 	DUMMY:		start = $0000, size = $00FF, file = "";
 }
@@ -14,7 +15,7 @@ SEGMENTS {
 	CODE:		load = BASROM,	type = ro;
 	CHRGET:		load = BASROM,	type = ro;
 	INIT:		load = BASROM,	type = ro;
-	EXTRA:		load = BASROM,	type = ro;
+	EXTRA:		load = EXTROM,	type = ro;
 	CPUVECTORS:	load = CPUVEC,	type = ro;
 	DUMMY:		load = DUMMY; # don't include
 }
